# mistral-ocr-gradio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml  tutorial.html
.claude/: settings.local.json
